--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.8",
+    "passport": "^0.4.0",
     "react-bootstrap": "^1.0.0-beta.14"
   },
   "devDependencies": {
