--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -12,7 +13,7 @@
     "react-items-carousel": "^2.8.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
