--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-google-login": "^5.0.7",
     "react-items-carousel": "^2.8.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
