--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
